<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/bg_15dp_white"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_120sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_7sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/no_internet_connection_banner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_14sdp"
            android:fontFamily="@font/inter_semi_bold"
            android:includeFontPadding="false"
            android:text="@string/no_network_available"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/please_check_your_connection_or_try_again"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tryAgainTxt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/bg_50dp_gradient_primary"
            android:fontFamily="@font/inter_semi_bold"
            android:foreground="@drawable/ripple_50dp_black"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="0.01"
            android:lines="1"
            android:text="@string/try_again"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>