<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_bg_dialog"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dialogCloseImg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:adjustViewBounds="true"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/icon_close_bg_dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_7sdp"
            android:fontFamily="@font/inter_medium"
            android:includeFontPadding="false"
            android:text="@string/background"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_14ssp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_tab_layout">

        <TextView
            android:id="@+id/allBgTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_background_selected"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/all_backgrounds"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/myBgTxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/my_backgrounds"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/allLay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_330sdp"
        android:layout_marginTop="@dimen/_5sdp">

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="visible" />

        <TextView
            android:id="@+id/errorTxt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sf_pro_medium"
            android:text="@string/error_message"
            android:textSize="@dimen/_13ssp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/onlineBgRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/myLay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_330sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone" />

        <TextView
            android:id="@+id/errorTxt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/sf_pro_medium"
            android:text="@string/no_any_background"
            android:textSize="@dimen/_13ssp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/downloadedBgRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp" />

    </RelativeLayout>

</LinearLayout>
